--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,19 +1,15 @@
-<html>
-  <head>
-  </head>
-  <body>
-    <nav class="navbar navbar-light bg-faded">
-      <div class="container">
-        <div class="row">
-          <div class="col-4"></div>
-        <div class="col-4"><h1>Simple ToDo List</h1></div>
-        </div>
-      </div>
-    </nav>
-      <div class="container">
-        <div class="content">
-          <router-outlet></router-outlet>
-        </div>
-      </div>
-  </body>
-</html>
+<div class="container">
+  <div class="row" id="header">
+    <div class="col-2">
+      <img src="/assets/logo.png"> 
+    </div>
+    <div class="col-8">
+      <h3 class="text-center" id="header-title">Simple ToDo List</h3>
+    </div>
+    <div class="col-2">
+    </div>
+  </div>
+</div>
+<div class="container" id="content">
+    <router-outlet></router-outlet>
+</div>
