--- a/src/app/_components/tasks/tasks.component.html
+++ b/src/app/_components/tasks/tasks.component.html
@@ -1,9 +1,11 @@
-<ul class="list-group" *ngIf="tasks.data">
-  <div *ngFor="let task of tasks.data">
-    <task-item [task]=task></task-item>
+<ul class="list-group" *ngIf="tasks">
+  <div *ngFor="let task of tasks">
+    <task-item 
+      [task]=task
+      (onDelete)="delete($event)">
+    </task-item>
+    <task-edit-form *ngIf="task.editable" [task]="task" (edit)="onEditSubmit($event)"></task-edit-form>
   </div>
 </ul>  
-
-
 
 <task-create-form (create)="create($event)"></task-create-form>
