--- a/src/app/_components/tasks/task-item/task-item.component.html
+++ b/src/app/_components/tasks/task-item/task-item.component.html
@@ -2,23 +2,27 @@
 <li *ngIf="!task.editable" class="list-group-item justify-content-between">
   <div class="row">
     <div class="col-10">
-      <div class="float-left task-toolbar task-toolbar-left">
-        <fa [name]="'caret-up'"  [size]=1></fa>
-        <fa [name]="'caret-down'" [size]=1></fa>
+      <div class="float-left task-toolbar task-toolbar-left" style="display: inline-grid;">
+        <fa [name]="'caret-up'" (click)="moveUp(task, index)" [size]=1></fa>
+        <fa [name]="'caret-down'" (click)="moveDown(task, index)" [size]=1></fa>
       </div>
-      <input type="checkbox" id="task-{{task.id}}" #completeCheckbox [checked]="task.attributes.done" (change)="onComplete(completeCheckbox.checked)" />
+      <input type="checkbox" id="task-{{task.id}}" #completeCheckbox [checked]="task.attributes.done" (change)="completeTask(completeCheckbox.checked)" />
       <span>{{ task.attributes.title }}</span>
       <span *ngIf="task.attributes.deadline" > {{ task.attributes.deadline | date :  'dd/MM/y hh:mm' }}</span>
     </div>
     <div class="col-2">
       <div class="float-right task-toolbar">
-        <fa [name]="'comment'" [size]=1 ></fa>
+        <fa [name]="'comment'" [size]=1 (click)="openModal(addCommentTemplate)" ></fa>
         <fa [name]="'clock-o'" [size]=1 (click)="openModal(setDeadlineTemplate)"></fa>
         <fa [name]="'pencil'" [size]=1 (click)="onEdit(task)"></fa>
         <fa [name]="'trash'" [size]=1 (click)="openModal(deleteTemplate)"></fa>
       </div>
     </div>
   </div>
+
+  <ng-template #addCommentTemplate>
+    <comments [task]=task [modalRef]="modalRef"></comments>
+  </ng-template>
 
   <ng-template #setDeadlineTemplate>
     <div class="modal-header">
