--- a/src/app/_components/tasks/task-item/task-item.component.html
+++ b/src/app/_components/tasks/task-item/task-item.component.html
@@ -21,7 +21,7 @@
   </div>
 
   <ng-template #addCommentTemplate>
-    <comments [task]=task [modalRef]="modalRef"></comments>
+    <comments [project]=project [task]=task [modalRef]="modalRef"></comments>
   </ng-template>
 
   <ng-template #setDeadlineTemplate>
