--- a/src/app/_components/sign-up/sign-up.component.html
+++ b/src/app/_components/sign-up/sign-up.component.html
@@ -5,8 +5,8 @@
           <h3 class="text-left title"> Sign Up</h3>
         </div>
         <div class="warning">
-            <div *ngIf="error">
-               <fa [name]="'exclamation-circle'" [fw]=true></fa> {{ error }}
+            <div *ngIf="error.username">
+               <fa [name]="'exclamation-circle'" [fw]=true></fa> {{ error.username }}
             </div>
 
             <div *ngIf="(f.username.touched || submitted) && f.username.errors">
