--- a/src/app/_components/projects/project-form/project-form.component.html
+++ b/src/app/_components/projects/project-form/project-form.component.html
@@ -1,11 +1,10 @@
-<h5>Projects</h5>
-<form class="form-group" [formGroup]="projectForm" (ngSubmit)="onSubmit()">
+<form  id="project-form" [formGroup]="projectForm" (ngSubmit)="onSubmit()">
   <div class="form-group">
     <input type="text" (focus)="formButtons=true" formControlName="title" placeholder='Enter project name' required class="form-control">
   </div>
 
   <div *ngIf="formButtons">
     <button class="btn btn-primary" type="submit" [disabled]="projectForm.invalid">Create Project</button>
-    <a class="btn btn-secondary" (click)="projectForm.reset()">Cancel</a>
+    <a class="btn" (click)="projectForm.reset(); formButtons=false;">Cancel</a>
   </div>
 </form>
