--- a/src/app/_components/sign-in/sign-in.component.html
+++ b/src/app/_components/sign-in/sign-in.component.html
@@ -4,6 +4,25 @@
       <div id="pre-form">
           <h3 class="text-left title"> Sign In</h3>
       </div>
+      {{ error.error }}
+      <div class="warning">
+          <div *ngIf="error.user">
+              <fa [name]="'exclamation-circle'" [fw]=true></fa> {{ error.user }}
+          </div>
+
+          <div *ngIf="(f.username.touched || submitted) && f.username.errors">
+            <div *ngIf="f.username.errors.required">
+              <fa [name]="'exclamation-circle'" [fw]=true></fa> The username is required.
+            </div>
+          </div>
+
+          <div *ngIf="(f.password.touched || submitted) && f.password.errors">
+            <div *ngIf="f.password.errors.required">
+              <fa [name]="'exclamation-circle'" [fw]=true></fa> The password is required.
+            </div>
+          </div>  
+      </div>    
+
       <form [formGroup]="signinForm" (ngSubmit)="onSubmit()">
         <div class="form-group">
           <input type="text" formControlName="username" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.username.errors }" placeholder="User name" />
