--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="row" id="header">
     <div class="col-2">
-      <img src="/assets/logo.png">
+      <!--<img src="/assets/logo.png">-->
     </div>
     <div class="col-8">
       <h3 class="text-center" id="header-title">Simple ToDo List</h3>
