--- a/src/app/_components/sign-in/sign-in.component.html
+++ b/src/app/_components/sign-in/sign-in.component.html
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="row">
-    <div class="col-4 offset-sm-4" id="form-content">
+    <div class="col-sm-12  col-md-4 offset-sm-4" id="form-content">
       <div id="pre-form">
           <h3 class="text-left title"> Sign In</h3>
       </div>
