--- a/src/app/_components/comments/comment-item/comment-item.component.html
+++ b/src/app/_components/comments/comment-item/comment-item.component.html
@@ -1,20 +1,14 @@
-
-<div class="row">
-  <div class="col-2">
-    <p class="text-muted">
-      <small>
+<div class="d-flex flex-row">
+<div class="">
+    <p class="text-left" style=" color: #a0a0a0; display: inline;">
         {{ comment.attributes.created_at | date: 'dd/MM/y' }}
-      </small>
     </p>
+    <fa (click)="onDelete.emit(comment);" [name]="'trash'" class="text-muted" [size]=1 ></fa>
+  <div >
+    <p> 
+      {{ comment.attributes.title }}
+    </p>
+     <img *ngIf="comment.attributes.attachment" src="{{ getFilePath(comment.attributes.attachment) }}" style="width: 250px;">
   </div>
-   <div class="col-10">
-    <span><fa  [name]="'trash'" class="text-muted" [size]=1 ></fa></span>
-  </div>
-</div>
-<div class="row">
-  <div class="col-12">
-    {{ comment.attributes.title }}
-  </div>
-
-  <img *ngIf="comment.attributes.attachment" src="{{ comment.attributes.attachment.url }}" class="img-thumbnail rounded float-left">
+ </div> 
 </div>  
