--- a/src/app/_components/tasks/task-edit-form/task-edit-form.component.html
+++ b/src/app/_components/tasks/task-edit-form/task-edit-form.component.html
@@ -2,8 +2,8 @@
   <div class="form-group">
     <input type="text" class="form-control form-control-lg" formControlName="title" placeholder="Enter task name" required autofocus>
   </div>
-  <div class="row">
-    <div class="col-2"><button class="btn btn-primary btn-md btn-block" type="submit" [disabled]="taskEditForm.invalid">Save</button></div>
-    <div class="col-2"><a (click)="onCloseForm()" class="btn btn-secondary btn-md btn-block">Cancel</a></div>
+  <div class="form-group">
+    <button class="btn btn-primary" type="submit" [disabled]="taskEditForm.invalid">Save</button>
+    <a (click)="onCloseForm()" class="btn ">Cancel</a>
   </div>
 </form>
