--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,12 +1,12 @@
 <div class="container">
   <div class="row" id="header">
-    <div class="col-2">
-      <!--<img src="/assets/logo.png">-->
+    <div class="col-sm-2">
+      <img src="/assets/logo.png">
     </div>
-    <div class="col-8">
+    <div class="col-sm-8">
       <h3 class="text-center" id="header-title">Simple ToDo List</h3>
     </div>
-    <div class="col-2">
+    <div class="col-sm-2">
       <div class="text-center" id="logout-link" *ngIf="logged">
         <fa [name]="'sign-out fa-2x'"  [fw]=true id="logout" (click)="logOut();"></fa>
       </div>
