--- a/src/styles.css
+++ b/src/styles.css
@@ -42,6 +42,18 @@ body {
     color: #83888e;
 }
 
+.red {
+    color: red;
+}
+
+.green {
+    color: green;
+}
+
+.checked {
+    text-decoration: line-through;
+}
+
 /*  project form */
 #project-form {
   padding-top: 2%; 
@@ -63,4 +75,37 @@ body {
 
 .task-form {
     padding-top: 2%; 
+}
+
+/* home */
+
+#projects_label {
+    padding-top: 2%; 
+    padding-bottom: 1%;
+}  
+
+
+/* comments */
+
+.clinch {
+    color: grey;
+    position: absolute;
+    top: 0;
+    right: 0;
+    z-index: 2;
+    display: block;
+    width: 34px;
+    padding-top: 12%;
+}    
+
+
+#attachment {
+    position: absolute;
+    top: 0;
+    right: 0;
+    z-index: 2;
+    display: block;
+    width: 34px;
+    padding-top: 12%;
+    opacity: 0;
 }
