--- a/src/app/_components/sign-in/sign-in.component.html
+++ b/src/app/_components/sign-in/sign-in.component.html
@@ -4,9 +4,8 @@
       <div id="pre-form">
           <h3 class="text-left title"> Sign In</h3>
       </div>
-      {{ error.error }}
       <div class="warning">
-          <div *ngIf="error.user">
+          <div *ngIf="error && error.user">
               <fa [name]="'exclamation-circle'" [fw]=true></fa> {{ error.user }}
           </div>
 
