--- a/src/app/_components/sign-up/sign-up.component.html
+++ b/src/app/_components/sign-up/sign-up.component.html
@@ -5,7 +5,7 @@
           <h3 class="text-left title"> Sign Up</h3>
         </div>
         <div class="warning">
-            <div *ngIf="error.username">
+            <div *ngIf="error && error.username">
                <fa [name]="'exclamation-circle'" [fw]=true></fa> {{ error.username }}
             </div>
 
