--- a/src/app/_components/tasks/task-deadline-form/task-deadline-form.component.html
+++ b/src/app/_components/tasks/task-deadline-form/task-deadline-form.component.html
@@ -1,6 +1,6 @@
 <div class="modal-header">
   <h4 class="modal-title pull-left">Deadline</h4>
-  <button type="button" class="close pull-right" aria-label="Close" (click)="onCloseDeadlineModal(); modalRef.hide()">
+  <button type="button" class="close pull-right" aria-label="Close" (click)="modalRef.hide()">
     <span aria-hidden="true">&times;</span>
   </button>
 </div>
